feat (payments): payments via stripe.
